Inner pages ENG texts

--- a/src/pages/en/about-humanitarian-aid.html
+++ b/src/pages/en/about-humanitarian-aid.html
@@ -14,7 +14,7 @@
 <body class="inner-page">
 <header class="header">
   <div class="container">
-    <a href="/" class="header_logo">
+    <a href="/en/" class="header_logo">
       <img src="/assets/img/svg/logo.svg" alt="Logo">
     </a>
 
@@ -40,16 +40,16 @@
   <div class="page_nav js-nav-container">
 
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Fundraising for humanitarian help</div>
+      <div class="page_nav-item_text">Fundraising for humanitarian assistance</div>
     </div>
     <div class="page_nav-item">
-      <a href="send-humanitarian.html" class="page_nav-item_text">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Giving campaign</a>
     </div>
     <div class="page_nav-item">
-      <a href="get-humanitarian.html" class="page_nav-item_text">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Getting the Humanitarian Assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
+      <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
     </div>
@@ -67,13 +67,15 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Fundraising for humanitarian help
+        Fundraising for humanitarian assistance
       </h2>
       <div class="description_info-text">
         <p>
-          The War has stopped to organize supplying the most important – medicines and food. Many people has lost their
-          homes, hiding in refuges, but resources are limited. We are doing all our best to prevent humanitarian crisis.
-          Join to rescue people.
+          Many logistic chains are completely disrupted now, a great deal of enterprises was physically destroyed, some
+          are unable to operate in war environments, and a lot of workers have left. People, who lived on territories
+          with warfare running, remained dishoused and destitute. They are being given shelter but the resources are
+          scarce. We do our best to prevent a humanitarian crisis. <b>Please, join with us for the rescue
+          activities.</b>
         </p>
       </div>
     </div>
@@ -93,7 +95,7 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="/" class="footer_logo">
+    <a href="/en/" class="footer_logo">
       <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
