--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -9,7 +9,8 @@
   <link rel="canonical" href="https://councilfreedom.com/en/"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
+  <meta name="description"
+        content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
   <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
 </head>
 
@@ -38,10 +39,7 @@
 
 <div class="container">
   <div class="banner">
-    <h1 class="banner_text">
-      Save Ukraine all together: humanitarian & medical help for injured citizens during the
-      War
-    </h1>
+    <h1 class="banner_text">Humanitarian and medical assistance to Ukraine</h1>
 
     <div class="arr_btn down js-next-screen"></div>
   </div>
@@ -49,16 +47,16 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian help</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="send-humanitarian.html" class="page_nav-item_text">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Giving campaign</a>
     </div>
     <div class="page_nav-item">
-      <a href="get-humanitarian.html" class="page_nav-item_text">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Getting the Humanitarian Assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
+      <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
     </div>
@@ -71,22 +69,21 @@
     </div>
     <div class="width_block-info">
       <div class="width_block-info_title title-1">
-        Catastrophe description in Ukraine
+        Disaster within the country
       </div>
       <div class="width_block-info_text">
-        <p>
-          24<sup>th</sup>of February 2022 year Russian Federation had started military attack to the territory of
-          Ukraine. Armed forces of Ukraine has been fighting off attacks of Russia every day, but air bombing attacks
-          against peaceful cities are still going on, destroying residential quarters in cities and ignoring to provide
-          humanitarian corridors for civil people.
-        </p>
-        <p>
-          2 000 civil citizens killed during several fist weeks of the War, preliminary the same quantity are injured, 2
-          000 000 Ukrainian citizens were forced to leave Ukraine to survive.
-        </p>
-        <p>
-          The whole world is united to stop bloody dictator. Discover what you can do to help with that.
-        </p>
+        <p>On the 24th of February, 2022 russia has started a full-scale invasion of Ukraine. The rocket strikes all
+          over Ukrainian territories were accompanied with terrestrial onset.</p>
+        <p>Being unable to succeed with a blitzkrieg, quick occupation of Kyiv and other big Ukrainian cities, the
+          russian army has taken on the most inhuman tactics – annihilation of Ukrainian cities avoiding a direct
+          contact with military services: through the rocket attacks, air raids and heavy aerial support.</p>
+        <p>According to the UNO, since the beginning of the war more than 3,5 mln of people have left the territory of
+          Ukraine. According to the UNO’s migration agency, about 6,5 mln of Ukrainians have become internally
+          displaced. </p>
+        <p>The office of the Ukrainian Prosecutor General has published a statistic of criminal offences committed by
+          russia during its full-scale invasion of Ukraine. The most painful is the presence of children among the civil
+          victims (139 dead and at least 205 injured). </p>
+        <p>The entire world got together to stop the bloody dictator. See, what could be your personal help.</p>
       </div>
     </div>
   </div>
@@ -95,16 +92,18 @@
     <!--Block 1-->
     <div class="block_one js-target-block" id="block-1">
       <div class="block_one-info">
-        <div class="block_one-info_title ">Fundraising for humanitarian help</div>
+        <div class="block_one-info_title ">Fundraising for humanitarian assistance</div>
         <div class="block_one-info_text">
           <p>
-            The War has stopped to organize supplying the most important – medicines and food. Many people has lost
-            their homes, hiding in refuges, but resources are limited. We are doing all our best to prevent humanitarian
-            crisis. Join to rescue people.
+            Many logistic chains are completely disrupted now, a great deal of enterprises was physically destroyed,
+            some are unable to operate in war environments, and a lot of workers have left. People, who lived on
+            territories with warfare running, remained dishoused and destitute. They are being given shelter but the
+            resources are scarce. We do our best to prevent a humanitarian crisis. Please, join with us for the rescue
+            activities.
           </p>
         </div>
         <div class="block_one-info_btn">
-          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Money transfers</a>
+          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Transfer funds</a>
         </div>
       </div>
       <div class="block_one-img">
@@ -114,19 +113,22 @@
     <!--Block 2-->
     <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
-        <div class="block_one-info_title ">Humanitarian aid collection</div>
+        <div class="block_one-info_title ">Giving campaign</div>
         <div class="block_one-info_text">
           <p>
-            Any help is useful. Food, clothes, medicines, medicine equipment, first aid kits - any that can help injured
-            people and refugees on the territory of War attacks. You can collect humanitarian help to your own solution
-            and send us- we will sort it and pass to whom needs in it more.
+            Civilians of cities besieged and continuously exposed to fire of the russian troops are being locked within
+            basements with no access to water, food, light and heat. Any help of yours will be proper and applicable.
+            Food (the infant food in particular), diapers, clothes, medicine, personal hygiene products, medical
+            equipment, first-aid kits, etc. – any of those can prove useful and save somebody’s life.
           </p>
+          <p>You can collect the humanitarian assistance and send it to us; we will sort it out and pass to those in the
+            extreme need of it.</p>
         </div>
         <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
-            To send humanitarian aid
+            Send the humanitarian assistance
           </button>
         </div>
       </div>
@@ -137,18 +139,23 @@
     <!--Block 3-->
     <div class="block_one js-target-block" id="block-3">
       <div class="block_one-info">
-        <div class="block_one-info_title ">Humanitarian aid receiving</div>
+        <div class="block_one-info_title ">Getting the Humanitarian Assistance</div>
         <div class="block_one-info_text">
           <p>
-            You lost your home, you are forced to leave home or hiding to survive? We can help you to receive
-            humanitarian aid.
+            Ukrainian Legal Advisory Group has prepared a map of destruction of the civil infrastructure caused by the
+            russian troops.
           </p>
+          <p>
+            About 6,5 mln of Ukrainians have become internally displaced.
+          </p>
+          <p>According to sociologists, 53% of Ukrainians who had a job before the war are currently unemployed. 22%
+            work on a regular basis, 21% – work remotely or partially, and only 2% have found a new job.</p>
         </div>
         <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
-            Help me
+            I need help
           </button>
         </div>
       </div>
@@ -161,20 +168,34 @@
       <div class="block_one-info">
         <div class="block_one-info_title "
              data-text="Money collection for ruined buildings’ reconstruction and infrastructure">
-          Money collection for ruined buildings’ reconstruction and infrastructure
+          Raising funds for reconstruction of ruined buildings and infrastructure
         </div>
         <div class="block_one-info_text">
           <p>
-            According to KSE’s and volunteers’ information approximately 200 educational institutions, 30 medical
-            institutions, 8 churches, 1600 residential buildings, 19 administrative buildings, 23 plants, 12 airfields,
-            5 heat power plants and 5 hydro power plants were partially / fully destroyed.
+            On a conservative estimate, the war damage to Ukrainian infrastructure during this month has grown to 1,8
+            trillion UAH.
           </p>
           <p>
-            Besides 15 000 km highways, 5 000 km roads, 350 bridges were partially or fully destroyed
+            Just during the first days of the russian invasion, the damage suffered by the Ukrainian infrastructure
+            reached at least 1,8 trillion UAH (62,6 billion USD). The estimate was provided by the KSE experts in
+            collaboration with government by the 17th of March.
+          </p>
+          <p>
+            Damaged are:
+          <ul>
+            <li>4 431 residential buildings;</li>
+            <li>548 educational institutions;</li>
+            <li>135 medical facilities;</li>
+            <li>8 culture and arts institutions;</li>
+            <li>26 plants and storages;</li>
+            <li>15 airports;</li>
+            <li>6 thermal power plants and hydroelectric stations.</li>
+          </ul>
+
           </p>
         </div>
         <div class="block_one-info_btn">
-          <a href="infrastructure.html" class="block_one-info_btn btn">Money transfers</a>
+          <a href="infrastructure.html" class="block_one-info_btn btn">Transfer money</a>
         </div>
       </div>
       <div class="block_one-img">
