--- a/src/pages/en/infrastructure.html
+++ b/src/pages/en/infrastructure.html
@@ -39,16 +39,16 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="about-humanitarian-aid.html" class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="send-humanitarian.html" class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Giving campaign</a>
     </div>
     <div class="page_nav-item">
-      <a href="get-humanitarian.html" class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Getting the Humanitarian Assistance</a>
     </div>
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
+      <div class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </div>
     </div>
@@ -65,23 +65,44 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Money collection for ruined buildings’ reconstruction and infrastructure
+        Raising funds for reconstruction of ruined buildings and infrastructure
       </h2>
       <div class="description_info-text">
         <p>
-          The war suspended the possibility of supplying the most important thing to Ukraine - medicines and food. Many
-          people are left without a roof over their heads - they are provided with shelter, but there are not enough
-          resources. We are doing everything we can to prevent a humanitarian crisis. Join the rescue.
+          On a conservative estimate, the war damage to Ukrainian infrastructure during this month has grown to 1,8
+          trillion UAH.
         </p>
         <p>
-          According to KSE’s and volunteers’ information approximately 200 educational institutions, 30 medical
-          institutions, 8 churches, 1600 residential buildings, 19 administrative buildings, 23 plants, 12 airfields,
-          5 heat power plants and 5 hydro power plants were partially / fully destroyed.
+          Just during the first days of the russian invasion, the damage suffered by the Ukrainian infrastructure
+          reached at least 1,8 trillion UAH (62,6 billion USD). The estimate was provided by the KSE experts in
+          collaboration with government by the 17th of March.
         </p>
         <p>
-          Besides 15 000 km highways, 5 000 km roads, 350 bridges were partially or fully destroyed. You can join in
-          raising funds to rebuild damaged housing and infrastructure
+          Damaged are:
+        <ul>
+          <li> 4 431 residential buildings;</li>
+          <li> 548 educational institutions;</li>
+          <li> 135 medical facilities;</li>
+          <li> 8 culture and arts institutions;</li>
+          <li> 26 plants and storages;</li>
+          <li> 15 airports;</li>
+          <li> 6 thermal power plants and hydroelectric stations.</li>
+
+        </ul>
+        <p></p>
+
+        <p>
+          Apart from that, due to the attacks of russian troops Ukraine has lost:
+        <ul>
+          <li>more than 15 thousand km of autoroads;</li>
+          <li>5 thousand km of railroads;</li>
+          <li> 350 bridges and passages.</li>
+        </ul>
         </p>
+        These calculations are based on analysis of few thousand public statements from civilians, government, and local
+        authorities as for the damage and loss all over the country.
+        </p>
+        <p>You can join us in raising funds for reconstruction of buildings and infrastructure destroyed. </p>
       </div>
     </div>
 
