--- a/en/send-humanitarian.html
+++ b/en/send-humanitarian.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<link href="../assets/css/app.4b854c65b9d3a223b618.css" rel="stylesheet"></head>
 <body class="inner-page">
 <header class="header">
   <div class="container">
-    <a href="/" class="header_logo">
+    <a href="/en/" class="header_logo">
       <img src="/assets/img/svg/logo.svg" alt="Logo">
     </a>
 
@@ -37,16 +37,16 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian help</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian assistance</a>
     </div>
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Humanitarian aid collection</div>
+      <div class="page_nav-item_text">Giving campaign</div>
     </div>
     <div class="page_nav-item">
-      <a href="get-humanitarian.html" class="page_nav-item_text">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Getting the Humanitarian Assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
+      <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
     </div>
@@ -60,14 +60,17 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Humanitarian aid collection
+        Giving campaign
       </h2>
       <div class="description_info-text">
         <p>
-          Any help is useful. Food, clothes, medicines, medicine equipment, first aid kits - any that can help injured
-          people and refugees on the territory of War attacks. You can collect humanitarian help to your own solution
-          and send us- we will sort it and pass to whom needs in it more.
+          Civilians of cities besieged and continuously exposed to fire of the russian troops are being locked within
+          basements with no access to water, food, light and heat. Any help of yours will be proper and applicable. Food
+          (the infant food in particular), diapers, clothes, medicine, personal hygiene products, medical equipment,
+          first-aid kits, etc. – any of those can prove useful and save somebody’s life.
         </p>
+        <p>You can collect the humanitarian assistance and send it to us; we will sort it out and pass to those in the
+          extreme need of it.</p>
       </div>
     </div>
 
@@ -76,7 +79,7 @@
       <button class=" btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
       >
-        Fill out the humanitarian aid form
+        Send the humanitarian assistance
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
@@ -89,7 +92,7 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="/" class="footer_logo">
+    <a href="/en/" class="footer_logo">
       <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
@@ -110,5 +113,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="../assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.4b854c65b9d3a223b618.js"></script><script type="text/javascript" src="../assets/js/app.4b854c65b9d3a223b618.js"></script></body>
 </html>
