--- a/en/about-humanitarian-aid.html
+++ b/en/about-humanitarian-aid.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<link href="../assets/css/app.4b854c65b9d3a223b618.css" rel="stylesheet"></head>
 <body class="inner-page">
 <header class="header">
   <div class="container">
-    <a href="/" class="header_logo">
+    <a href="/en/" class="header_logo">
       <img src="/assets/img/svg/logo.svg" alt="Logo">
     </a>
 
@@ -38,16 +38,16 @@
   <div class="page_nav js-nav-container">
 
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Fundraising for humanitarian help</div>
+      <div class="page_nav-item_text">Fundraising for humanitarian assistance</div>
     </div>
     <div class="page_nav-item">
-      <a href="send-humanitarian.html" class="page_nav-item_text">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Giving campaign</a>
     </div>
     <div class="page_nav-item">
-      <a href="get-humanitarian.html" class="page_nav-item_text">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Getting the Humanitarian Assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
+      <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
     </div>
@@ -65,13 +65,15 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Fundraising for humanitarian help
+        Fundraising for humanitarian assistance
       </h2>
       <div class="description_info-text">
         <p>
-          The War has stopped to organize supplying the most important – medicines and food. Many people has lost their
-          homes, hiding in refuges, but resources are limited. We are doing all our best to prevent humanitarian crisis.
-          Join to rescue people.
+          Many logistic chains are completely disrupted now, a great deal of enterprises was physically destroyed, some
+          are unable to operate in war environments, and a lot of workers have left. People, who lived on territories
+          with warfare running, remained dishoused and destitute. They are being given shelter but the resources are
+          scarce. We do our best to prevent a humanitarian crisis. <b>Please, join with us for the rescue
+          activities.</b>
         </p>
       </div>
     </div>
@@ -91,7 +93,7 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="/" class="footer_logo">
+    <a href="/en/" class="footer_logo">
       <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
@@ -112,5 +114,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="../assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.4b854c65b9d3a223b618.js"></script><script type="text/javascript" src="../assets/js/app.4b854c65b9d3a223b618.js"></script></body>
 </html>
