--- a/en/get-humanitarian.html
+++ b/en/get-humanitarian.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<link href="../assets/css/app.4b854c65b9d3a223b618.css" rel="stylesheet"></head>
 <body class="inner-page">
 <header class="header">
   <div class="container">
-    <a href="/" class="header_logo">
+    <a href="/en/" class="header_logo">
       <img src="/assets/img/svg/logo.svg" alt="Logo">
     </a>
 
@@ -37,16 +37,16 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian help</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="send-humanitarian.html" class="page_nav-item_text">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Giving campaign</a>
     </div>
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Humanitarian aid receiving</div>
+      <div class="page_nav-item_text">Getting the Humanitarian Assistance</div>
     </div>
     <div class="page_nav-item">
-      <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
+      <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
     </div>
@@ -60,13 +60,23 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Humanitarian aid receiving
+        Getting the Humanitarian Assistance
       </h2>
       <div class="description_info-text">
         <p>
-          You lost your home, you are forced to leave home or hiding to survive? We can help you to receive
-          humanitarian aid.
+          Ukrainian Legal Advisory Group has prepared a map of destruction of the civil infrastructure caused by the
+          russian troops.
         </p>
+        <p>About 6,5 mln of Ukrainians have become internally displaced. </p>
+        <p>According to sociologists, 53% of Ukrainians who had a job before the war are currently unemployed. 22% work
+          on a regular basis, 21% – work remotely or partially, and only 2% have found a new job.</p>
+        <p>As a result of the war, 52% of residents claim the sufficient worsening of their economic condition, 28% say
+          it is rather worsening, and only 18% state their condition is unchanged. The income «satisfies» the basic
+          needs of a man, gives a feeling of safety and dampen anxiety and fear of the uncertain future.
+          40% of those asked think their savings will suffice for one month only.
+        </p>
+        <p>Have you lost your home? Have you had to run for life? Are you in difficulties? We can help you to get the
+          humanitarian assistance. </p>
       </div>
     </div>
 
@@ -75,7 +85,7 @@
       <button class="btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
       >
-        Fill in the form for humanitarian aid
+        I need help
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
@@ -89,7 +99,7 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="/" class="footer_logo">
+    <a href="/en/" class="footer_logo">
       <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
@@ -110,5 +120,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="../assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.4b854c65b9d3a223b618.js"></script><script type="text/javascript" src="../assets/js/app.4b854c65b9d3a223b618.js"></script></body>
 </html>
