Inner pages mobile images (ENG)

--- a/src/pages/en/get-humanitarian.html
+++ b/src/pages/en/get-humanitarian.html
@@ -58,7 +58,10 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/get-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/get-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/get-humanitarian-img.png" alt="get humanitarian image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
