--- a/src/pages/en/infrastructure.html
+++ b/src/pages/en/infrastructure.html
@@ -61,7 +61,10 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/infrastructure-descr-img.png" alt="infrastructure description image">
+      <picture>
+        <source srcset="/assets/img/infrastructure-descr-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/infrastructure-descr-img.png" alt="infrastructure description image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
