--- a/src/pages/en/send-humanitarian.html
+++ b/src/pages/en/send-humanitarian.html
@@ -58,7 +58,10 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/send-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/send-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/send-humanitarian-img.png" alt="send humanitarian aid">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
