--- a/src/pages/en/about-humanitarian-aid.html
+++ b/src/pages/en/about-humanitarian-aid.html
@@ -63,7 +63,10 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/about-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
