Added socials link + tel/email

--- a/src/pages/get-humanitarian.html
+++ b/src/pages/get-humanitarian.html
@@ -24,10 +24,10 @@
     </div>
 
     <div class="socials">
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.facebook.com/Council-of-Freedom-109874411665655/" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
       </a>
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.instagram.com/invites/contact/?i=14lruxfv56w9q&utm_content=o2st932" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
@@ -115,15 +115,28 @@
     </div>
 
     <div class="socials">
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.facebook.com/Council-of-Freedom-109874411665655/" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-facebook-white.svg" alt="facebook">
       </a>
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.instagram.com/invites/contact/?i=14lruxfv56w9q&utm_content=o2st932" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-instagram-white.svg" alt="instagram">
       </a>
     </div>
 
     <div class="arr_btn js-scroll-top"></div>
+  </div>
+
+  <div class="container">
+    <div class="footer_contacts">
+      <div class="footer_contacts_item">
+        <span>UA:</span>
+        <a href="tel:+380638564099">+380638564099</a>
+      </div>
+      <div class="footer_contacts_item">
+        <span class="mobile-hidden">Email:</span>
+        <a href="mailto:councilfreedom@councilfreedom.com">councilfreedom@councilfreedom.com</a>
+      </div>
+    </div>
   </div>
 </footer>
 </body>
