--- a/about-humanitarian-aid.html
+++ b/about-humanitarian-aid.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.62a7fd2d661c155802ea.css" rel="stylesheet"></head>
+<link href="assets/css/app.06000a02b59a1c250c45.css" rel="stylesheet"></head>
 <body class="inner-page">
 <header class="header">
   <div class="container">
@@ -22,10 +22,10 @@
     </div>
 
     <div class="socials">
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.facebook.com/Council-of-Freedom-109874411665655/" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
       </a>
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.instagram.com/invites/contact/?i=14lruxfv56w9q&utm_content=o2st932" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
@@ -106,16 +106,29 @@
     </div>
 
     <div class="socials">
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.facebook.com/Council-of-Freedom-109874411665655/" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-facebook-white.svg" alt="facebook">
       </a>
-      <a href="/" class="socials-item" target="_blank">
+      <a href="https://www.instagram.com/invites/contact/?i=14lruxfv56w9q&utm_content=o2st932" class="socials-item" target="_blank">
         <img src="/assets/img/svg/icon-instagram-white.svg" alt="instagram">
       </a>
     </div>
 
     <div class="arr_btn js-scroll-top"></div>
   </div>
+
+  <div class="container">
+    <div class="footer_contacts">
+      <div class="footer_contacts_item">
+        <span>UA:</span>
+        <a href="tel:+380638564099">+380638564099</a>
+      </div>
+      <div class="footer_contacts_item">
+        <span class="mobile-hidden">Email:</span>
+        <a href="mailto:councilfreedom@councilfreedom.com">councilfreedom@councilfreedom.com</a>
+      </div>
+    </div>
+  </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.62a7fd2d661c155802ea.js"></script><script type="text/javascript" src="assets/js/app.62a7fd2d661c155802ea.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.06000a02b59a1c250c45.js"></script><script type="text/javascript" src="assets/js/app.06000a02b59a1c250c45.js"></script></body>
 </html>
