--- a/send-humanitarian.html
+++ b/send-humanitarian.html
@@ -8,8 +8,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.06000a02b59a1c250c45.css" rel="stylesheet"></head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W3VJ28P');</script>
+  <!-- End Google Tag Manager -->
+<link href="assets/css/app.9cb9729ad76eca5651b2.css" rel="stylesheet"></head>
 <body class="inner-page">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3VJ28P"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -132,5 +144,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.06000a02b59a1c250c45.js"></script><script type="text/javascript" src="assets/js/app.06000a02b59a1c250c45.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.9cb9729ad76eca5651b2.js"></script><script type="text/javascript" src="assets/js/app.9cb9729ad76eca5651b2.js"></script></body>
 </html>
