About us page ...in progress

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,9 @@
         інфраструктури
       </a>
     </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">Про нас</a>
+    </div>
   </div>
   <!--NAVIGATION END-->
 
