--- a/src/pages/about-humanitarian-aid.html
+++ b/src/pages/about-humanitarian-aid.html
@@ -65,6 +65,9 @@
         інфраструктури
       </a>
     </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">Про нас</a>
+    </div>
 
     <div class="page_nav-item">
       <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
