About us page added slider

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -135,9 +135,9 @@
             до порятунку.
           </p>
         </div>
-<!--        <div class="block_one-info_btn">-->
-<!--          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>-->
-<!--        </div>-->
+        <!--        <div class="block_one-info_btn">-->
+        <!--          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>-->
+        <!--        </div>-->
       </div>
       <div class="block_one-img">
         <img width="769" height="542" src="/assets/img/about-us-img.png"/>
@@ -145,10 +145,40 @@
     </div>
   </div>
 
+  <section class="docs-slider">
+    <div class="docs-slider-title title-1 center">Уставні документи:</div>
+    <div class="docs-slider_wrap">
+
+      <div class="docs-slider-list js-docs-slider">
+        <div class="docs-slider-list-item"><img src="/assets/img/slider-1.png" alt="slider-1"></div>
+        <div class="docs-slider-list-item"><img src="/assets/img/slider-1.png" alt="slider-1"></div>
+        <div class="docs-slider-list-item"><img src="/assets/img/slider-1.png" alt="slider-1"></div>
+        <div class="docs-slider-list-item"><img src="/assets/img/slider-1.png" alt="slider-1"></div>
+        <div class="docs-slider-list-item"><img src="/assets/img/slider-1.png" alt="slider-1"></div>
+        <div class="docs-slider-list-item"><img src="/assets/img/slider-1.png" alt="slider-1"></div>
+      </div>
+      <div class="docs-slider-btns">
+        <div class="docs-slider-btn prev">
+          <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.40002 16.2L1.40002 8.99995L7.40003 1.79995" stroke="black" stroke-width="2"
+                  stroke-linecap="round"/>
+          </svg>
+        </div>
+        <div class="docs-slider-btn next">
+          <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.40002 16.2L1.40002 8.99995L7.40003 1.79995" stroke="black" stroke-width="2"
+                  stroke-linecap="round"/>
+          </svg>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
   <section class="description">
     <div class="description_info">
       <div class="description_info-title">
-        Про організацію
+        Наші цінності та принципи:
       </div>
       <div class="description_info-text">
         <ul>
@@ -158,7 +188,8 @@
           <li>открытость и развитие.</li>
         </ul>
         На нашем сайте легко найти отчет за любой месяц, а также результаты аудиторских проверок.
-        Наша команда открыта новому, всегда готова выслушать ваши идеи в социальной сфере и содействовать их наиболее эффективной реализации.
+        Наша команда открыта новому, всегда готова выслушать ваши идеи в социальной сфере и содействовать их наиболее
+        эффективной реализации.
       </div>
 
       <div class="description_info-btns">
@@ -166,7 +197,7 @@
           <img src="/assets/img/svg/icon-email.svg" alt="facebook">
           Counciloffreedomhelp@gmail.com
         </a>
-        <a class="btn big" href="mailto:+38(063)8564099">
+        <a class="btn big" href="tel:+38(063)8564099">
           <img src="/assets/img/svg/icon-phone-white.svg" alt="facebook">
           +38 (063) 856 40 99
         </a>
