About us page added slider

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -41,7 +41,8 @@
     </a>
 
     <div class="lang">
-      <a href="/en/about-humanitarian-aid.html" class="lang-item">en</a>
+      <!--TODO замінити силку-->
+      <a href="/en/index.html" class="lang-item">en</a>
       <div class="lang-item active">ua</div>
     </div>
 
@@ -216,7 +217,8 @@
     </a>
 
     <div class="lang">
-      <a href="/en/about-humanitarian-aid.html" class="lang-item">en</a>
+      <!--TODO замінити силку-->
+      <a href="/en/index.html" class="lang-item">en</a>
       <div class="lang-item active">ua</div>
     </div>
 
