--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-W3VJ28P');</script>
-  <!-- End Google Tag Manager -->
-<link href="assets/css/app.9cb9729ad76eca5651b2.css" rel="stylesheet"></head>
+<link href="assets/css/app.124b537749952c4db21a.css" rel="stylesheet"></head>
 
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -75,6 +68,9 @@
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
         інфраструктури
       </a>
+    </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">Про нас</a>
     </div>
   </div>
   <!--NAVIGATION END-->
@@ -309,6 +305,6 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.9cb9729ad76eca5651b2.js"></script><script type="text/javascript" src="assets/js/app.9cb9729ad76eca5651b2.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.124b537749952c4db21a.js"></script><script type="text/javascript" src="assets/js/app.124b537749952c4db21a.js"></script></body>
 
 </html>
