--- a/send-humanitarian.html
+++ b/send-humanitarian.html
@@ -8,19 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-W3VJ28P');</script>
-  <!-- End Google Tag Manager -->
-<link href="assets/css/app.9cb9729ad76eca5651b2.css" rel="stylesheet"></head>
+<link href="assets/css/app.124b537749952c4db21a.css" rel="stylesheet"></head>
 <body class="inner-page">
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3VJ28P"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 <header class="header">
   <div class="container">
@@ -61,6 +50,9 @@
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
         інфраструктури
       </a>
+    </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">Про нас</a>
     </div>
   </div>
   <!--NAVIGATION FINISH-->
@@ -144,5 +136,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.9cb9729ad76eca5651b2.js"></script><script type="text/javascript" src="assets/js/app.9cb9729ad76eca5651b2.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.124b537749952c4db21a.js"></script><script type="text/javascript" src="assets/js/app.124b537749952c4db21a.js"></script></body>
 </html>
